--- a/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/create-service.component.html
+++ b/src/app/dashboard-page/dashboard-pages/my-services-dashboard/create-service/create-service.component.html
@@ -2,52 +2,19 @@
   <div class="steps">
     <h3>Создание услуги</h3>
     <div class="steps-wrap" >
-      <div class="step" *ngFor="let step of serviceCreationSteps, let i = index " (click)="goToStep(i+1)" [ngClass]="{dev: currentStep === i+1 }">
+      <div class="step" *ngFor="let step of serviceCreationSteps, let i = index " (click)="goToStep(i+1)" [ngClass]="{dev: currentStep === i+1, done: currentStep > i+1 }">
         <h5>{{ step.title }}</h5>
         <p>{{ step.description }}</p>
         <span class="step-order">{{ i+1 }}</span>
       </div>
-      <!-- <div class="step dev">
-        <h5></h5>
-        <p>
-          Успех выбора Вашей услуги зависит насколько качественно и точно Вы
-          назовёте услуги и заполните критерии поиска.
-        </p>
-        <span class="step-order">1</span>
-      </div>
-      <div class="step">
-        <h5></h5>
-        <p>">2</span>
-      </div>
-      <div class="step">
-        <h5></h5>
-        <p></p>
-        <span class="step-order">3</span>
-      </div>
-      <div class="step">
-        <h5></h5>
-        <p></p>
-        <span class="step-order">4</span>
-      </div>
-      <div class="step">
-        <h5></h5>
-        <p>
 
-        </p>
-        <span class="step-order">5</span>
-      </div>
-      <div class="step">
-        <h4></h4>
-        <span class="step-order">6</span>
-      </div> -->
     </div>
   </div>
   <div class="step-detail">
-    <!-- <router-outlet></router-outlet> -->
-    <app-first-step-service-creation *ngIf="userService && currentStep === 1" [userService]="userService" (setCurrentStep)="setCurrentStep($event)"></app-first-step-service-creation>
-    <app-second-step-creation *ngIf="userService && currentStep === 2" [userService]="userService" (setCurrentStep)="setCurrentStep($event)"></app-second-step-creation>
-    <!-- <div>2</div>
-    <div>3</div>
+    <!-- <app-first-step-service-creation *ngIf="userService && currentStep === 1" [userService]="userService" (setCurrentStep)="setCurrentStep($event)"></app-first-step-service-creation>
+    <app-second-step-creation *ngIf="userService && currentStep === 2" [userService]="userService" (setCurrentStep)="setCurrentStep($event)"></app-second-step-creation> -->
+    <app-third-step-creation></app-third-step-creation>
+    <!--  <div>3</div>
     <div>4</div>
     <div>5</div>
     <div>6</div> -->
