--- a/src/app/catalog-page/catalog/filter/filter.component.html
+++ b/src/app/catalog-page/catalog/filter/filter.component.html
@@ -13,7 +13,7 @@
             matInput
             number
             placeholder="UAH"
-            [(ngModel)]="filterData.price"
+            [(ngModel)]="filterData.minPrice"
             (ngModelChange)="onFilterChange()"
             type="text"
             name="price-min"
@@ -27,7 +27,7 @@
             matInput
             number
             placeholder="UAH"
-            [(ngModel)]="filterData.price_max"
+            [(ngModel)]="filterData.maxPrice"
             (ngModelChange)="onFilterChange()"
             type="text"
             name="price-max"
@@ -40,7 +40,7 @@
       <div class="title">
         <mat-form-field>
           <mat-label>Срок выполнения</mat-label>
-          <mat-select [(ngModel)]="filterData.term" (ngModelChange)="onFilterChange()">
+          <mat-select [(ngModel)]="filterData.maxTerm" (ngModelChange)="onFilterChange()">
             <mat-option value="">None</mat-option>
             <mat-option value="1" >Экспресс за 24 часа</mat-option>
             <mat-option value="3" >До 3 дней</mat-option>
@@ -53,9 +53,6 @@
       <!-- <div class="filter term">
 
       </div> -->
-    </div>
-    <div class="set-filter-btn">
-      <span>фильтровать</span>
     </div>
   </div>
 </div>
