--- a/src/app/shared/modules/categories-header/categories-header.component.scss
+++ b/src/app/shared/modules/categories-header/categories-header.component.scss
@@ -1,5 +1,5 @@
 .wrapper{
-  max-width: 1549px;
+  max-width: 1499px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
@@ -14,7 +14,7 @@
   margin: 0;
   padding: 0;
   position: relative;
-  padding: 20px 15px;
+  padding: 20px 0;
   overflow: hidden;
   transition: overflow 0.5s;
   .categorie-name{
